--- a/triangle/canvas5sin_btn.html
+++ b/triangle/canvas5sin_btn.html
@@ -195,7 +195,7 @@
           disabled
         />)<br />
       </form>
-      <div id="quiz">
+      <!-- <div id="hints">
         <h4>観察ポイント</h4>
         <ul>
           <li>重心は、各辺の中線（頂点と辺の中点を結ぶ線）の交点である。</li>
@@ -210,9 +210,8 @@
           <li>傍心同士を結合すると、必ず頂点上を通る。</li>
           <li>鈍角三角形の場合、垂心と外心は三角形外部になる。</li>
           <li>傍心と向き合う頂点を結んだ三直線は一点で交わり、それは内心と一致する。</li>
-          <li></li>
         </ul>
-      </div>
+      </div> -->
     </div>
 
     <script src="./circle.js"></script>
