chore: Add comments

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -75,7 +75,7 @@
           onclick="redraw('incenter');"
           class="btn btn-primary"
         />
-        <span id="sampleIncenter">Ｏ</span>内心座標: I(
+        <span id="sampleIncenter">Ｏ</span>座標: I(
         <input type="text" id="x0i" placeholder="x0i" size="4" disabled />,
         <!--  -->
         <input
@@ -91,7 +91,7 @@
           class="btn btn-primary"
           onclick="redraw('circumcenter');"
         />
-        <span id="sampleCircumcenter">Ｏ</span>外心座標: O(
+        <span id="sampleCircumcenter">Ｏ</span>座標: O(
         <input type="text" id="x0O" placeholder="x0O" size="4" disabled />,
         <!--  -->
         <input
@@ -108,7 +108,7 @@
           onclick="redraw('centroid');"
           class="btn btn-primary"
         />
-        <span id="sampleCentroid">Ｏ</span>重心座標: G(
+        <span id="sampleCentroid">Ｏ</span>座標: G(
         <input type="text" id="x0g" placeholder="x0g" size="4" disabled />,
         <!--  -->
         <input
@@ -124,7 +124,7 @@
           class="btn btn-primary"
           onclick="redraw('orthocenter');"
         />
-        <span id="sampleOrthocenter">Ｏ</span>垂心座標: H(
+        <span id="sampleOrthocenter">Ｏ</span>座標: H(
         <input
           type="text"
           id="x0h"
@@ -144,7 +144,7 @@
           onclick="redraw('excenter');"
           class="btn btn-primary"
         />
-        <span id="sampleExcenter">Ｏ</span>傍心座標: ia(
+        <span id="sampleExcenter">Ｏ</span>座標: ia(
         <input
           type="text"
           id="x0ia"
