chore: Change UI color

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -92,25 +92,25 @@
             type="button"
             value="ランダム三角形"
             onclick="setVertices('random');"
-            class="btn btn-primary"
+            class="btn btn-dark"
           />
           <input
             type="button"
             value="直角三角形"
             onclick="setVertices('right');"
-            class="btn btn-primary"
+            class="btn btn-dark"
           />
           <input
             type="button"
             value="正三角形"
             onclick="setVertices('equilateral');"
-            class="btn btn-primary"
+            class="btn btn-dark"
           />
           <input
             type="button"
             value="上記の三点座標で描画"
             onclick="redraw('all')"
-            class="btn btn-primary"
+            class="btn btn-dark"
           />
 
           <h3>計算結果</h3>
@@ -206,9 +206,9 @@
               type="button"
               value="内心のみ表示"
               onclick="redraw('incenter');"
-              class="btn btn-primary"
+              class="btn btn-dark"
             />
-            <span id="sampleIncenter">Ｏ</span>内心座標: I
+            <span id="sampleIncenter">Ｏ</span>I: 
             <div class="col-xs-2">
               <input
                 type="text"
@@ -234,10 +234,10 @@
             <input
               type="button"
               value="外心のみ表示"
-              class="btn btn-primary"
+              class="btn btn-dark"
               onclick="redraw('circumcenter');"
             />
-            <span id="sampleCircumcenter">Ｏ</span>外心座標: O
+            <span id="sampleCircumcenter">Ｏ</span>O: 
             <div class="col-xs-2">
               <input
                 type="text"
@@ -265,9 +265,9 @@
               type="button"
               value="重心のみ表示"
               onclick="redraw('centroid');"
-              class="btn btn-primary"
+              class="btn btn-dark"
             />
-            <span id="sampleCentroid">Ｏ</span>重心座標: G
+            <span id="sampleCentroid">Ｏ</span>G:
             <div class="col-xs-2">
               <input
                 type="text"
@@ -294,10 +294,10 @@
             <input
               type="button"
               value="垂心のみ表示"
-              class="btn btn-primary"
+              class="btn btn-dark"
               onclick="redraw('orthocenter');"
             />
-            <span id="sampleOrthocenter">Ｏ</span>垂心座標: H
+            <span id="sampleOrthocenter">Ｏ</span>H: 
             <div class="col-xs-2">
               <input
                 type="text"
@@ -325,9 +325,9 @@
               type="button"
               value="傍心のみ表示"
               onclick="redraw('excenter');"
-              class="btn btn-primary"
+              class="btn btn-dark"
             />
-            <span id="sampleExcenter">Ｏ</span>傍心座標: ia(
+            <span id="sampleExcenter">Ｏ</span>ia: 
             <div class="col-xs-2">
               <input
                 type="text"
@@ -348,7 +348,7 @@
                 disabled
               />
             </div>
-            ib:
+            ib: 
             <div class="col-xs-2">
               <input
                 type="text"
