--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -13,28 +13,27 @@
   </head>
   <body onload="setVertices('random')">
     <div id="wrapper" class="row">
-      <div id="canvas_wrapper" class="col-lg-6">
+      <div id="canvas_wrapper" class="m-2">
         <canvas>
           Canvas not supported.
         </canvas>
       </div>
 
-      <div id="container" class="col-lg-6">
+      <div id="container" class="m-4">
         <p>
           canvas内の任意の三点をクリックしてください。三角形の五心が表示されます。
         </p>
         <form>
-          <h3>三角形生成</h3>
-          <!--  -->
-          <div class="row">
-            P1:
+          <h2>三角形生成</h2>
+          <div class="form-group row">
+            <label for="x1" class="col-xs-2 col-form-label">P1:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x1"
                 placeholder="x1"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
               />
             </div>
             <div class="col-xs-2">
@@ -43,18 +42,18 @@
                 id="y1"
                 placeholder="y1"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
               />
             </div>
 
-            P2:
+            <label for="x2" class="col-xs-2 col-form-label">P2:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x2"
                 placeholder="x2"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
               />
             </div>
             <div class="col-xs-2">
@@ -63,18 +62,18 @@
                 id="y2"
                 placeholder="y2"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
               />
             </div>
 
-            P3:
+            <label for="x3" class="col-xs-2 col-form-label">P3:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x3"
                 placeholder="x3"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
               />
             </div>
             <div class="col-xs-2">
@@ -83,7 +82,7 @@
                 id="y3"
                 placeholder="y3"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
               />
             </div>
           </div>
@@ -113,89 +112,92 @@
             class="btn btn-dark"
           />
 
-          <h3>計算結果</h3>
+          <h2>計算結果</h2>
           <div class="row">
-            辺の長さ a:
+            <label for="a" class="col-xs-2 col-form-label">辺の長さ a:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="a"
                 placeholder="a"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 readonly
                 disabled
               />
             </div>
-            b:
+
+            <label for="b" class="col-xs-2 col-form-label">b:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="b"
                 placeholder="b"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
-            c:
+
+            <label for="c" class="col-xs-2 col-form-label">c:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="c"
                 placeholder="c"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
           </div>
 
           <div class="row">
-            s = (a+b+c)/2
+            <label for="s" class="col-xs-2 col-form-label">s = (a+b+c)/2</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="s"
                 placeholder="s"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
-            面積S
+            <label for="S" class="col-xs-2 col-form-label">面積 S:</label>
+
             <div>
               <input
                 type="text"
                 id="S"
                 placeholder="S"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
           </div>
           <div class="row">
-            内接円半径r：
+            <label for="r" class="col-xs-2 col-form-label">内接円半径r:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="r"
                 placeholder="r"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
 
-            外接円半径R：
+            <label for="R" class="col-xs-2 col-form-label">外接円半径R:</label>
             <div class="col-xs-2">
               <input
                 type="text"
                 id="R"
                 placeholder="R"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -208,14 +210,16 @@
               onclick="redraw('incenter');"
               class="btn btn-dark"
             />
-            <span id="sampleIncenter">Ｏ</span>I: 
+            <label for="x0i" class="col-xs-2 col-form-label">
+                <span id="sampleIncenter">Ｏ</span>I:</label
+              >
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x0i"
                 placeholder="x0i"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -225,7 +229,7 @@
                 id="y0i"
                 placeholder="y0i"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -237,14 +241,16 @@
               class="btn btn-dark"
               onclick="redraw('circumcenter');"
             />
-            <span id="sampleCircumcenter">Ｏ</span>O: 
+            <label for="x0O" class="col-xs-2 col-form-label">
+                <span id="sampleCircumcenter">Ｏ</span>O:</label
+              >
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x0O"
                 placeholder="x0O"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -254,7 +260,7 @@
                 id="y0O"
                 placeholder="y0O"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -267,14 +273,16 @@
               onclick="redraw('centroid');"
               class="btn btn-dark"
             />
-            <span id="sampleCentroid">Ｏ</span>G:
+            <label for="x0g" class="col-xs-2 col-form-label">
+                <span id="sampleCentroid">Ｏ</span>G:</label
+              >
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x0g"
                 placeholder="x0g"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -284,7 +292,7 @@
                 id="y0g"
                 placeholder="y0g"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -297,14 +305,16 @@
               class="btn btn-dark"
               onclick="redraw('orthocenter');"
             />
-            <span id="sampleOrthocenter">Ｏ</span>H: 
+            <label for="x0h" class="col-xs-2 col-form-label">
+              <span id="sampleOrthocenter">Ｏ</span>H:</label
+            >
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x0h"
                 placeholder="x0h"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -314,7 +324,7 @@
                 id="y0h"
                 placeholder="y0h"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -327,14 +337,17 @@
               onclick="redraw('excenter');"
               class="btn btn-dark"
             />
-            <span id="sampleExcenter">Ｏ</span>ia: 
+
+            <label for="x0ia" class="col-xs-2 col-form-label">
+              <span id="sampleExcenter">Ｏ</span> ia:</label
+            >
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x0ia"
                 placeholder="x0ia"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -344,18 +357,20 @@
                 id="y0ia"
                 placeholder="y0ia"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
-            ib: 
+
+            <label for="x0ib" class="col-xs-2 col-form-label">ib:</label>
+
             <div class="col-xs-2">
               <input
                 type="text"
                 id="x0ib"
                 placeholder="x0ib"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -365,19 +380,19 @@
                 id="y0ib"
                 placeholder="y0ib"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
-            ic:
+            <label for="x0ic" class="col-xs-2 col-form-label">ic:</label>
+
             <div class="col-xs-2">
-              
               <input
                 type="text"
                 id="x0ic"
                 placeholder="x0ic"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
@@ -387,64 +402,71 @@
                 id="y0ic"
                 placeholder="y0ic"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
           </div>
           <div class="row">
-            傍心半径 ra:
+            <label for="ra" class="col-xs-2 col-form-label">傍心半径ra:</label>
+
             <div class="col-xs-2">
               <input
                 type="text"
                 id="ra"
                 placeholder="ra"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
-            rb:
+            <label for="rb" class="col-xs-2 col-form-label">rb:</label>
+
             <div class="col-xs-2">
               <input
                 type="text"
                 id="rb"
                 placeholder="rb"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
-            rc:
+            <label for="rc" class="col-xs-2 col-form-label">rc:</label>
+
             <div class="col-xs-2">
               <input
                 type="text"
                 id="rc"
                 placeholder="rc"
                 size="4"
-                class="form-control form-control-sm"
+                class="form-control"
                 disabled
               />
             </div>
           </div>
         </form>
-        <!-- <div id="hints">
-        <h4>観察ポイント</h4>
-        <ul>
-          <li>重心は、各辺の中線（頂点と辺の中点を結ぶ線）の交点である。</li>
-          <li>外心は、各辺の垂直二等分線の交点である。</li>
-          <li>垂心は、各頂点から各辺に下ろした垂線の交点である。</li>
-          <li>内心は、各角の二等分線の交点である。</li>
-          <li>傍心は、あるの角の二等分線と残り2つの角の外角の二等分線の交点である。</li>
-          <li>重心は、中線を２：１に分離する。</li>
-          <li>直角三角形の外心は、常に一番長い辺の上に存在する。</li>
-          <li>重心は常に三角形の内部に存在する。</li>
-          <li>外心・垂心・重心は常に一直線上に存在する。（オイラー線）</li>
-          <li>傍心同士を結合すると、必ず頂点上を通る。</li>
-          <li>鈍角三角形の場合、垂心と外心は三角形外部になる。</li>
-          <li>傍心と向き合う頂点を結んだ三直線は一点で交わり、それは内心と一致する。</li>
-        </ul>
-      </div> -->
+        <div id="hints">
+          <h2>観察要点</h2>
+          <ul>
+            <li>重心は、各辺の中線（頂点と辺の中点を結ぶ線）の交点である。</li>
+            <li>外心は、各辺の垂直二等分線の交点である。</li>
+            <li>垂心は、各頂点から各辺に下ろした垂線の交点である。</li>
+            <li>内心は、各角の二等分線の交点である。</li>
+            <li>
+              傍心は、あるの角の二等分線と残り2つの角の外角の二等分線の交点である。
+            </li>
+            <li>重心は、中線を２：１に分離する。</li>
+            <li>直角三角形の外心は、常に一番長い辺の上に存在する。</li>
+            <li>重心は常に三角形の内部に存在する。</li>
+            <li>外心・垂心・重心は常に一直線上に存在する。（オイラー線）</li>
+            <li>傍心同士を結合すると、必ず頂点上を通る。</li>
+            <li>鈍角三角形の場合、垂心と外心は三角形外部になる。</li>
+            <li>
+              傍心と向き合う頂点を結んだ三直線は一点で交わり、それは内心と一致する。
+            </li>
+          </ul>
+        </div>
       </div>
 
       <script src="./circle.js"></script>
