chore: Modify UI Use Bootstrap automatic width For some reason broken the click position detection (small gap between input and output)

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>Canvas triangle 5center</title>
+    <title>Triangle 5 Centers</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -13,13 +13,13 @@
   </head>
   <body onload="setVertices('random')">
     <div id="wrapper" class="row">
-      <div id="canvas_wrapper" class="m-2">
+      <div id="canvas_wrapper" class="m-4 col-md-auto">
         <canvas>
           Canvas not supported.
         </canvas>
       </div>
 
-      <div id="container" class="m-4">
+      <div id="container" class="m-4 col-md-auto">
         <p>
           canvas内の任意の三点をクリックしてください。三角形の五心が表示されます。
         </p>
