chore: Altered color sample UI of the 5 centers; from character to svg

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -236,8 +236,12 @@
 
           <div class="row">
             <label for="x0i" class="col-xs-2 col-form-label">
-              <span id="sampleIncenter">Ｏ</span>内心I:</label
-            >
+              <svg width="12" height="12">
+                <circle id="sampleIncenter" cx="6" cy="6" r="6" />
+              </svg>
+              内心I:
+            </label>
+
             <div class="col-xs-2">
               <input
                 type="text"
@@ -261,8 +265,11 @@
           </div>
           <div class="row">
             <label for="x0O" class="col-xs-2 col-form-label">
-              <span id="sampleCircumcenter">Ｏ</span>外心O:</label
-            >
+              <svg width="12" height="12">
+                <circle id="sampleCircumcenter" cx="6" cy="6" r="6" />
+              </svg>
+              外心O:
+            </label>
             <div class="col-xs-2">
               <input
                 type="text"
@@ -287,7 +294,10 @@
 
           <div class="row">
             <label for="x0g" class="col-xs-2 col-form-label">
-              <span id="sampleCentroid">Ｏ</span>重心G:</label
+              <svg width="12" height="12">
+                <circle id="sampleCentroid" cx="6" cy="6" r="6" />
+              </svg>
+              重心G:</label
             >
             <div class="col-xs-2">
               <input
@@ -313,7 +323,10 @@
 
           <div class="row">
             <label for="x0h" class="col-xs-2 col-form-label">
-              <span id="sampleOrthocenter">Ｏ</span>垂心H:</label
+              <svg width="12" height="12">
+                <circle id="sampleOrthocenter" cx="6" cy="6" r="6" />
+              </svg>
+              垂心H:</label
             >
             <div class="col-xs-2">
               <input
@@ -339,7 +352,10 @@
 
           <div class="row">
             <label for="x0ia" class="col-xs-2 col-form-label">
-              <span id="sampleExcenter">Ｏ</span>傍心ia:</label
+              <svg width="12" height="12">
+                <circle id="sampleExcenter" cx="6" cy="6" r="6" />
+              </svg>
+              傍心ia:</label
             >
             <div class="col-xs-2">
               <input
@@ -447,7 +463,7 @@
           </div>
         </form>
         <div id="hints">
-          <h2>観察要点</h2>
+          <h2>基礎知識</h2>
           <ul>
             <li>重心は、各辺の中線（頂点と辺の中点を結ぶ線）の交点である。</li>
             <li>外心は、各辺の垂直二等分線の交点である。</li>
