--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -236,8 +236,8 @@
 
           <div class="row">
             <label for="x0i" class="col-xs-2 col-form-label">
-              <svg width="12" height="12">
-                <circle id="sampleIncenter" cx="6" cy="6" r="6" />
+              <svg id="sampleIncenter">
+                <circle />
               </svg>
               内心I:
             </label>
@@ -265,8 +265,8 @@
           </div>
           <div class="row">
             <label for="x0O" class="col-xs-2 col-form-label">
-              <svg width="12" height="12">
-                <circle id="sampleCircumcenter" cx="6" cy="6" r="6" />
+              <svg id="sampleCircumcenter">
+                <circle />
               </svg>
               外心O:
             </label>
@@ -294,8 +294,8 @@
 
           <div class="row">
             <label for="x0g" class="col-xs-2 col-form-label">
-              <svg width="12" height="12">
-                <circle id="sampleCentroid" cx="6" cy="6" r="6" />
+              <svg id="sampleCentroid">
+                <circle />
               </svg>
               重心G:</label
             >
@@ -323,8 +323,8 @@
 
           <div class="row">
             <label for="x0h" class="col-xs-2 col-form-label">
-              <svg width="12" height="12">
-                <circle id="sampleOrthocenter" cx="6" cy="6" r="6" />
+              <svg id="sampleOrthocenter">
+                <circle />
               </svg>
               垂心H:</label
             >
@@ -352,8 +352,8 @@
 
           <div class="row">
             <label for="x0ia" class="col-xs-2 col-form-label">
-              <svg width="12" height="12">
-                <circle id="sampleExcenter" cx="6" cy="6" r="6" />
+              <svg id="sampleExcenter">
+                <circle />
               </svg>
               傍心ia:</label
             >
